# tanks1

./: .gitignore  CMakeLists.txt  FindOGRE.cmake  InputContext.h  Makefile  ObjectTextDisplay.cpp  ObjectTextDisplay.h  SdkTrays.h  SkeletonDebug.cpp  WorkingWithOgre.cpp  WorkingWithOgre.h  plugins.cfg  resources.cfg
Media/fonts/: FreeSans.fontdef
Media/materials/scripts/: scene.material
Media/models/: Body.mesh  Body.skeleton  Body1.mesh  Body1.skeleton  Cube.001.mesh  Cube.002.mesh  Cylinder.004.mesh  Gun1.mesh  Gun2.mesh  Map1.mesh  Tower1.mesh  Tower1.skeleton  Tower2.mesh  Tower2.skeleton  Wheel.mesh  body1.mesh  map1.mesh
Media/scripts/: tank1_loader.chai
WikiTutorial/: BaseApplication.cpp  BaseApplication.h  TutorialApplication.cpp
cmake_modules/: FindOGRE.cmake
src/: ExampleFrameListener.h  ScriptManager.cpp  ScriptManager.h  SdkCameraMan.h  SkeletonDebug.h  TanksApplication.cpp  TanksApplication.h
